--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # database init, supports mysql too
 database=h2
-spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
-spring.sql.init.data-locations=classpath*:db/${database}/data.sql
+spring.sql.init.schema-locations=classpath*:db/${database:postgres}/schema.sql
+spring.sql.init.data-locations=classpath*:db/${database:postgres}/data.sql
 
 # Web
 spring.thymeleaf.mode=HTML
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update	
 spring.jpa.open-in-view=false
 
 # Internationalization
