--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,42 @@
+# Comments are provided throughout this file to help you get started.
+# If you need more help, visit the Docker Compose reference guide at
+# https://docs.docker.com/go/compose-spec-reference/
+
+# Here the instructions define your application as a service called "server".
+# This service is built from the Dockerfile in the current directory.
+# You can add other services your application may depend on here, such as a
+# database or a cache. For examples, see the Awesome Compose repository:
+# https://github.com/docker/awesome-compose
 services:
-  mysql:
-    image: mysql:9.1
+  server:
+    build:
+      context: .
     ports:
-      - "3306:3306"
+      - 8080:8080
+    depends_on:
+      db:
+        condition: service_healthy
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_ALLOW_EMPTY_PASSWORD=true
-      - MYSQL_USER=petclinic
-      - MYSQL_PASSWORD=petclinic
-      - MYSQL_DATABASE=petclinic
+      POSTGRES_USER: postgres           # Default PostgreSQL username
+      POSTGRES_PASSWORD: mercury        # Your PostgreSQL password
+      POSTGRES_DB: postgres 
+  db:
+    image: postgres
+    restart: always
     volumes:
-      - "./conf.d:/etc/mysql/conf.d:ro"
-  postgres:
-    image: postgres:17.0
-    ports:
-      - "5432:5432"
+      - db-data:/var/lib/postgres
     environment:
-      - POSTGRES_PASSWORD=petclinic
-      - POSTGRES_USER=petclinic
-      - POSTGRES_DB=petclinic
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=mercury
+    ports:
+      - 5432:5432
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+volumes:
+  db-data:
+
+
